[tool.poetry]
name = "bot-reg-user"
version = "0.1.0"
description = ""
authors = ["sanch <sanch13sanch@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
aiogram = "3.4.1"
aiosqlite = "^0.20.0"
pydantic-settings = "2.2.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
aiosmtplib = "^3.0.2"
apscheduler = "^3.10.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
